removed xml and .idea from git tracking

--- a/requirements.in
+++ b/requirements.in
@@ -1,48 +1,70 @@
-aiohttp
-arrow
-catboost
-db-dtypes
-gcsfs
-geojson
-geopandas
-geopy
-google-api-core
-google-auth
-google-auth-oauthlib
-google-cloud
-google-cloud-aiplatform
-google-cloud-appengine-logging
-google-cloud-audit-log
-google-cloud-bigquery
-google-cloud-bigquery-connection
-google-cloud-bigquery-storage
-google-cloud-core
-google-cloud-functions
-google-cloud-iam
-google-cloud-logging
-google-cloud-resource-manager
-google-cloud-storage
-google-crc32c
-google-genai
+pyarrow
 lightgbm
-matplotlib
-numpy
-pandas
-pandas-gbq
-pyjstat
-pytest
+nest-asyncio
+geopy
+geopandas
+nbconvert
+referencing
+charset-normalizer
+humanize
+google-cloud-aiplatform
+beautifulsoup4
+google-cloud-iam
+aiohttp
+google-cloud
+google-cloud-functions
+geojson
 python-dateutil
-requests
-requests-oauthlib
-requests-toolbelt
+google-cloud-resource-manager
+google-api-core
+urllib3
+google-cloud-secret-manager
+google-cloud-bigquery-storage
+google-cloud-logging
+Twisted
 scikit-learn
+google-cloud-appengine-logging
+google-cloud-core
 scipy
-seaborn
-shapely
+pillow
+db-dtypes
+arrow
+google-cloud-storage
+frozenlist
+pytest
+pyjstat
+google-auth
 tomli
-torch
-torchmetrics
-tqdm
-xgboost
-dotenv
 sibr-module
+numpy
+torchmetrics
+python-dotenv
+google-auth-oauthlib
+pandas
+pyOpenSSL
+google-genai
+requests
+torch
+requests-toolbelt
+tqdm
+playwright
+scrapy-playwright
+lxml
+seaborn
+google-cloud-bigquery-connection
+pandas-gbq
+catboost
+requests-oauthlib
+google-cloud-bigquery
+matplotlib
+itemadapter
+grpcio
+Scrapy
+gcsfs
+matplotlib-inline
+xgboost
+itemloaders
+google-crc32c
+shapely
+google-cloud-audit-log
+kfp
