--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,9 +2,21 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 steps:
-# ---- STEG 1 & 2: Bygg og push alle imagene (samme som før) ----
-# (Behold alle dine 'build-...' og 'push-...' steg her)
-# ...
+# STEP 0: Check the commit message.
+- name: 'gcr.io/cloud-builders/git' # <-- THIS IS THE FIX. Use the official git image.
+  id: 'Check-commit-message'
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - |
+    commit_message=$(git log -1 --pretty=%B "${COMMIT_SHA}")
+    if [[ ! "$commit_message" =~ "gcloud build" ]]; then
+      echo "Keyword 'gcloud build' is missing. Failing build."
+      exit 1
+    else
+      echo "Keyword found. Proceeding with build."
+    fi
+
 # ---- STEG 1: Bygg alle tre imagene (parallelt) ----
 - name: 'gcr.io/cloud-builders/docker'
   id: 'build-scraping'
@@ -32,12 +44,17 @@ steps:
 
 # ---- STEG 2: Push alle tre imagene til Artifact Registry ----
 - name: 'gcr.io/cloud-builders/docker'
+  id: 'push-scraping'
   waitFor: ['build-scraping']
   args: ['push', 'europe-west1-docker.pkg.dev/sibr-market/sibr-market-repo/scraping:${COMMIT_SHA}']
+
 - name: 'gcr.io/cloud-builders/docker'
+  id: 'push-geocoding'
   waitFor: ['build-geocoding']
   args: ['push', 'europe-west1-docker.pkg.dev/sibr-market/sibr-market-repo/geocoding:${COMMIT_SHA}']
+
 - name: 'gcr.io/cloud-builders/docker'
+  id: 'push-modeling'
   waitFor: ['build-modeling']
   args: ['push', 'europe-west1-docker.pkg.dev/sibr-market/sibr-market-repo/modeling:${COMMIT_SHA}']
 
@@ -52,6 +69,7 @@ steps:
   - |
     pip install -r requirements.txt && \
     python pipelines/pipeline.py
+
 
 # ---- STEG 4: Opprett eller oppdater tidsplanen for pipelinen ----
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
