--- a/modeling/requirements.txt
+++ b/modeling/requirements.txt
@@ -45,6 +45,8 @@ cloudpickle==3.1.1
     # via bigframes
 comm==0.2.3
     # via ipywidgets
+contourpy==1.3.3
+    # via matplotlib
 cycler==0.12.1
     # via matplotlib
 db-dtypes==1.4.3
@@ -86,6 +88,8 @@ geographiclib==2.1
     # via geopy
 geojson==3.2.0
     # via -r requirements.in
+geopandas==1.1.1
+    # via bigframes
 geopy==2.4.1
     # via -r requirements.in
 google-api-core[grpc]==2.25.1
@@ -293,7 +297,6 @@ matplotlib==3.10.5
     # via
     #   bigframes
     #   catboost
-    #   seaborn
 matplotlib-inline==0.1.7
     # via ipython
 mdurl==0.1.2
@@ -313,7 +316,9 @@ numpy==2.3.2
     #   -r requirements.in
     #   bigframes
     #   catboost
+    #   contourpy
     #   db-dtypes
+    #   geopandas
     #   lightgbm
     #   matplotlib
     #   pandas
@@ -321,7 +326,6 @@ numpy==2.3.2
     #   pyogrio
     #   scikit-learn
     #   scipy
-    #   seaborn
     #   shapely
     #   sibr-module
     #   torchmetrics
@@ -335,6 +339,7 @@ opentelemetry-api==1.36.0
 packaging==25.0
     # via
     #   db-dtypes
+    #   geopandas
     #   google-cloud-aiplatform
     #   google-cloud-bigquery
     #   lightning-utilities
@@ -350,10 +355,10 @@ pandas==2.3.2
     #   bigframes
     #   catboost
     #   db-dtypes
+    #   geopandas
     #   google-cloud-bigquery
     #   pandas-gbq
     #   pyjstat
-    #   seaborn
     #   sibr-module
 pandas-gbq==0.29.2
     # via
@@ -441,8 +446,12 @@ pygments==2.19.2
     #   rich
 pyjstat==2.4.0
     # via -r requirements.in
+pyogrio==0.11.1
+    # via geopandas
 pyparsing==3.2.3
     # via matplotlib
+pyproj==3.7.2
+    # via geopandas
 pytest==8.4.1
     # via -r requirements.in
 python-dateutil==2.9.0.post0
@@ -492,12 +501,11 @@ scipy==1.16.1
     #   lightgbm
     #   scikit-learn
     #   xgboost
-seaborn==0.13.2
-    # via -r requirements.in
 shapely==2.1.1
     # via
     #   -r requirements.in
     #   bigframes
+    #   geopandas
     #   google-cloud-aiplatform
 sibr-module==0.1.9
     # via -r requirements.in
