--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,7 +17,7 @@ steps:
       echo "Keyword found. Proceeding with build."
     fi
 
-## ---- STEG 1: Bygg alle tre imagene (parallelt) ----
+## ---- STEG 1: Build the Docker images in parallel ----
 #- name: 'gcr.io/cloud-builders/docker'
 #  id: 'build-scraping'
 #  args:
@@ -43,7 +43,7 @@ steps:
 #    - 'europe-west1-docker.pkg.dev/sibr-market/sibr-market-repo/modeling:${COMMIT_SHA}'
 #    - './modeling'
 
-## ---- STEP 2: Push alle tre imagene til Artifact Registry ----
+## ---- STEP 2: Push to Artifact Registry ----
 #- name: 'gcr.io/cloud-builders/docker'
 #  id: 'push-scraping'
 #  waitFor: ['build-scraping']
@@ -60,7 +60,7 @@ steps:
 #  args: ['push', 'europe-west1-docker.pkg.dev/sibr-market/sibr-market-repo/modeling:${COMMIT_SHA}']
 
 
-## ---- STEG 3: Kompiler pipeline-definisjonen ----
+## ---- STEG 3: Compile the pipeline ----
 #- name: 'python:3.11'
 #  id: 'compile-pipeline'
 #  waitFor: ['push-scraping', 'push-geocoding', 'push-modeling']
@@ -76,28 +76,46 @@ steps:
 #    pip install -r pipelines/requirements.txt && \
 #    python pipelines/pipeline.py
 
-# ---- STEP 4: Create pipeline ----
+# ---- STEP 4: Submit and schedule the pipeline using Python SDK ----
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  id: 'schedule-pipeline'
-  #waitFor: ['compile-pipeline']
-  # Endre entrypoint til bash for å kunne kjøre flere kommandoer
+  id: 'submit-pipeline'
+  waitFor: ['compile-pipeline']
   entrypoint: 'bash'
   args:
     - '-c'
     - |
-      # Installer komponenten som trengs for 'gcloud ai' kommandoer.
-      # '-q' flagget er for "quiet mode" for å unngå unødvendig output.
-      gcloud components install google-cloud-cli-ai -q && \
+      # Install the beta component (needed for some Vertex AI features, though not directly used here)
+      gcloud components install beta -q
 
-      # Kjør den opprinnelige kommandoen din
-      gcloud ai pipeline-jobs create \
-        --project=sibr-market \
-        --location=europe-west1 \
-        --display-name=sibr-market-scheduled-run \
-        --template-uri=gs://sibr-market/sibr_market_pipeline.json \
-        --schedule='0 2 */3 * *' \
-        --schedule-time-zone=Europe/Oslo \
-        --pipeline-root=gs://sibr-market
+      # Install Python dependencies for Vertex AI SDK
+      apt-get update && apt-get install -y python3-pip
+      pip3 install google-cloud-aiplatform
+
+      # Run a Python script to submit and schedule the pipeline (create this script inline or separately)
+      cat <<EOF > submit_pipeline.py
+      import google.cloud.aiplatform as aiplatform
+
+      aiplatform.init(project='sibr-market', location='europe-west1')
+
+      # Submit the PipelineJob
+      job = aiplatform.PipelineJob(
+          display_name='sibr-market-scheduled-run',
+          template_path='gs://sibr-market/sibr_market_pipeline.json',
+          pipeline_root='gs://sibr-market'
+      )
+      job.submit()
+
+      # Create a schedule for recurring runs (adjust cron as needed: '0 2 */3 * *' = every 3 days at 2:00 AM)
+      schedule = aiplatform.PipelineJobSchedule(
+          pipeline_job=job,
+          display_name='sibr-market-schedule',
+          cron='0 2 */3 * *',
+          timezone='Europe/Oslo'
+      )
+      schedule.create()
+      EOF
+
+      python3 submit_pipeline.py
 
 images:
 - 'europe-west1-docker.pkg.dev/sibr-market/sibr-market-repo/scraping:${COMMIT_SHA}'
