--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -59,7 +59,7 @@ steps:
 #  waitFor: ['build-modeling']
 #  args: ['push', 'europe-west1-docker.pkg.dev/sibr-market/sibr-market-repo/modeling:${COMMIT_SHA}']
 
-
+#
 ## ---- STEG 3: Compile the pipeline ----
 #- name: 'python:3.11'
 #  id: 'compile-pipeline'
@@ -79,7 +79,7 @@ steps:
 # ---- STEP 4: Submit and schedule the pipeline using Python SDK ----
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   id: 'submit-pipeline'
-  waitFor: ['compile-pipeline']
+  #waitFor: ['compile-pipeline']
   entrypoint: 'bash'
   args:
     - '-c'
