--- a/pipelines/requirements.txt
+++ b/pipelines/requirements.txt
@@ -156,6 +156,7 @@ python-dotenv==1.1.1
     # via -r requirements.in
 pyyaml==6.0.2
     # via
+    #   -r requirements.in
     #   kfp
     #   kubernetes
 requests==2.32.5
